--- a/style.css
+++ b/style.css
@@ -50,5 +50,17 @@ body {
 
 .bg-image {
   width: 100%;
+  height: 100vh;
   background-image: url(./images/pngtree-woman-in-colorful-music-sound-wallpaper-image_2894117.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  filter: blur(25px);
+}
+
+.music-player{
+    width:600px;
+    height: 400px;
+    border-radius: 30px;
+    background-color: #474646b9;
 }
