--- a/style.css
+++ b/style.css
@@ -45,22 +45,153 @@
 }
 
 body {
-  font-family: "proxima_nova_black";
+  font-family:  "proxima_nova_black";
 }
 
 .bg-image {
   width: 100%;
   height: 100vh;
-  background-image: url(./images/pngtree-woman-in-colorful-music-sound-wallpaper-image_2894117.jpg);
+  background-image: url(./images/6123.avif);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
   filter: blur(25px);
+  position: absolute;
+  top: 0;
+  z-index: -1;
 }
 
 .music-player{
     width:600px;
     height: 400px;
+    margin: 100px auto;
+    padding: 0px 30px;
     border-radius: 30px;
-    background-color: #474646b9;
+    background-color: #2c2b2bc9;
+
+}
+
+.music-player .header{
+    width: 100%;
+    padding: 30px 0px;
+}
+
+.music-player .header .image{
+    width: 100px;
+    height: 100px;
+    border-radius: 20px;
+    overflow:hidden;
+    float: left;
+    
+}
+.music-player .header .image img{
+    width: 100%;
+    
+}
+
+.music-player .header .description{
+    width: calc(100% - 140px);
+    padding: 10px 20px;
+    float: left;
+
+}
+
+.clear{
+    clear: both;
+}
+
+.description .system{
+    font-size:1rem;
+    font-weight: 600;
+    color:rgb(135, 133, 133);
+    margin-bottom: 10px;
+}
+.description .s-name{
+    font-size: 1.3rem;
+    font-weight:bolder;
+    color: #fff;
+    margin-bottom: 2px;
+}
+.description .singer{
+    font-size: 18px;
+    font-weight:300 ;
+    color: #fff;
+}
+.music-player .player{
+    width: 100%;
+    margin-top: 20px;
+}
+
+.player .time-line{
+    width: 100%;
+    height: 2px;
+    position: relative;
+}
+
+.player .time-line .background{
+    width: 100%;
+    height: 100%;
+    background-color:rgb(135, 133, 133) ;
+}
+
+.player .time-line .fill{
+    width: 50%;
+    height: 100%;
+    background-color: #fff;
+    position: absolute;
+    top:0;
+}
+.player .time-line .fill-btn{
+    width: 10px;
+    height: 10px;
+    background-color: #fff;
+    border-radius: 50%;
+    position: absolute;
+    top: -4px;
+    left: 50%;
+}
+.player .under-time-line{
+    width: 100%;
+    margin-top: 10px;
+    position: relative;
+}
+
+#time-past, #time-left{
+    color: rgb(200, 200, 200);
+    font-size: 13px;
+    position: absolute;
+    top:0;
+}
+#time-past{
+    left: 0;
+}
+#time-left{
+    right:0;
+}
+
+.player .buttons{
+    width: 100%;
+    margin-top: 50px;
+    text-align: center;
+}
+
+.player .buttons .btn{
+    background-color: transparent;
+    border: none;
+}
+#play-pause{
+    width:80px;
+    height: 80px;
+    
+}
+
+#back-btn{
+    width: 70px;
+    height: 70px;
+    margin-right: 100px;
+}
+#next-btn{
+    width: 70px;
+    height: 70px;
+    margin-left: 100px;
 }
